Updated case layout to include a lead hero image Added mobile styles to fix headers and spacing Updated Case Studies with new front matter data

--- a/assets/css/scss/_components.scss
+++ b/assets/css/scss/_components.scss
@@ -45,6 +45,12 @@
 		display: block;
 		font-size: 12px;
 		opacity: .4;
+		position: relative;
+		top: -4px;
+		
+		@include mobile {
+			font-size: 10px;
+		}
 	}
 	#menu li:nth-of-type(4) a:before {
 		display: none;
