--- a/assets/css/scss/_typography.scss
+++ b/assets/css/scss/_typography.scss
@@ -31,6 +31,7 @@
 		@include mobile {
 			@include font-size(3.6);
 			line-height: 1.25;
+			margin-top: 12px;
 		}
 	}
 	h3 {}
@@ -153,7 +154,8 @@
 			margin-top: 24px;
 			@include tablet {}
 			@include mobile {
-				@include font-size(1.6);
+				@include font-size(2);
+				margin-top: 4px;
 			}
 		}
 
