--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2530,6 +2530,7 @@ h2 {
     font-size: 36px;
     font-size: 3.6rem;
     line-height: 1.25;
+    margin-top: 12px;
   }
 }
 
@@ -2680,8 +2681,9 @@ h3 {
 }
 @media (max-width: 480px) {
   h3 {
-    font-size: 16px;
-    font-size: 1.6rem;
+    font-size: 20px;
+    font-size: 2rem;
+    margin-top: 4px;
   }
 }
 
@@ -2925,12 +2927,12 @@ header {
 }
 @media (max-width: 768px) {
   #wrapper_work {
-    padding: 36px 18px 0;
+    padding: 18px 18px 0;
   }
 }
 @media (max-width: 480px) {
   #wrapper_work {
-    padding: 36px 18px 0;
+    padding: 0 18px 0;
   }
 }
 
@@ -3796,6 +3798,7 @@ h2 {
     font-size: 36px;
     font-size: 3.6rem;
     line-height: 1.25;
+    margin-top: 12px;
   }
 }
 
@@ -3946,8 +3949,9 @@ h3 {
 }
 @media (max-width: 480px) {
   h3 {
-    font-size: 16px;
-    font-size: 1.6rem;
+    font-size: 20px;
+    font-size: 2rem;
+    margin-top: 4px;
   }
 }
 
@@ -4181,6 +4185,13 @@ nav {
   display: block;
   font-size: 12px;
   opacity: 0.4;
+  position: relative;
+  top: -4px;
+}
+@media (max-width: 480px) {
+  #menu a:before {
+    font-size: 10px;
+  }
 }
 
 #menu li:nth-of-type(4) a:before {
